Fix HTTPS mixed content and PWA path issues
Fixes for GitHub Pages deployment:

1. Location Service (services/location.js):
   - Switched from http://ip-api.com to https://ipapi.co
   - ipapi.co provides free HTTPS geolocation API
   - Fixes mixed content error on HTTPS sites
   - Better fallback to browser geolocation

2. Service Worker (public/sw.js):
   - Updated cache paths to include base path (/weather-widget/)
   - Changed cache version to v2
   - Fixed asset URLs for GitHub Pages subdirectory
   - Added skipWaiting and clients.claim for faster updates

3. PWA Manifest (public/manifest.json):
   - Updated start_url to /weather-widget/
   - Added scope to /weather-widget/
   - Fixed icon path to /weather-widget/icon.svg
   - Ensures PWA works correctly in subdirectory

4. Service Worker Registration (main.js):
   - Use import.meta.env.BASE_URL for dynamic path
   - Fixes 404 error for sw.js
   - Works in both dev and production

This fixes:
✅ Mixed content warning (HTTP on HTTPS)
✅ 404 errors for icon.svg and sw.js
✅ Location detection now works on HTTPS
✅ PWA installable with correct paths
✅ Service worker registers successfully

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,13 +2,14 @@
   "name": "Weather Widget",
   "short_name": "Weather",
   "description": "Real-time weather widget with animated radar",
-  "start_url": "/",
+  "start_url": "/weather-widget/",
+  "scope": "/weather-widget/",
   "display": "standalone",
   "background_color": "#1e40af",
   "theme_color": "#1e40af",
   "icons": [
     {
-      "src": "/icon.svg",
+      "src": "/weather-widget/icon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
